Fix old openapi
