# acmesky/models/__init__.py
@@ -4,6 +4,7 @@
 from __future__ import absolute_import
 # import models into model package
 from acmesky.models.address import Address
+from acmesky.models.buy_offer_response import BuyOfferResponse
 from acmesky.models.error import Error
 from acmesky.models.flight import Flight
 from acmesky.models.interest import Interest
