# acmesky/models/buy_offer_response.py
@@ -1,0 +1,68 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from acmesky.models.base_model_ import Model
+from acmesky import util
+
+
+class BuyOfferResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, pay_offer_url=None):  # noqa: E501
+        """BuyOfferResponse - a model defined in OpenAPI
+
+        :param pay_offer_url: The pay_offer_url of this BuyOfferResponse.  # noqa: E501
+        :type pay_offer_url: str
+        """
+        self.openapi_types = {
+            'pay_offer_url': str
+        }
+
+        self.attribute_map = {
+            'pay_offer_url': 'pay_offer_url'
+        }
+
+        self._pay_offer_url = pay_offer_url
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BuyOfferResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The BuyOfferResponse of this BuyOfferResponse.  # noqa: E501
+        :rtype: BuyOfferResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def pay_offer_url(self):
+        """Gets the pay_offer_url of this BuyOfferResponse.
+
+
+        :return: The pay_offer_url of this BuyOfferResponse.
+        :rtype: str
+        """
+        return self._pay_offer_url
+
+    @pay_offer_url.setter
+    def pay_offer_url(self, pay_offer_url):
+        """Sets the pay_offer_url of this BuyOfferResponse.
+
+
+        :param pay_offer_url: The pay_offer_url of this BuyOfferResponse.
+        :type pay_offer_url: str
+        """
+        if pay_offer_url is None:
+            raise ValueError("Invalid value for `pay_offer_url`, must not be `None`")  # noqa: E501
+        if pay_offer_url is not None and len(pay_offer_url) < 1:
+            raise ValueError("Invalid value for `pay_offer_url`, length must be greater than or equal to `1`")  # noqa: E501
+
+        self._pay_offer_url = pay_offer_url
